--- a/views/css/process_browser.css
+++ b/views/css/process_browser.css
@@ -276,3 +276,12 @@ input[type="button"]
 	font-size: 12px;
 	font-family: Verdana, Helvetica, sans-serif;
 }
+
+#loader{
+	position:absolute;
+	left:40%;
+	top:50%;
+	z-index:1000;
+	font-size: 26px;
+	color: #CCC;
+}
